# kukajto-downloader

./: LICENSE  MANIFEST.in  README.md  kukajto-downloader.py  main.py  preview.webm  pyproject.toml  requirements.txt  setup.py
src/kukajto_downloader/: __init__.py  cmd.py  constants.py  exceptions.py  scraper.py  utils.py  wrapper.py
src/kukajto_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kukajto_downloader/web/: __init__.py  __main__.py  constants.py  dialogs.py  utils.py
src/kukajto_downloader/web/assets/: index.html  script.js  style.css
src/paralell_downloader/: __init__.py  downloader.py
